# glaze-components

./: Cargo.toml  README.md  cycle_task_list.bat  glaze_example.yaml  move_task_list.py
.github/workflows/: release.yaml  release.yml  rust.yml
src/: config.rs  macros.rs  main.rs
src/daily_note/: mod.rs  note_provider.rs
test_assets/: 2024-05-01.md
