[package]
name = "daily-note"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-std = { version = "1.12.0", features = ["attributes"] }
chrono = "0.4.38"
futures = "0.3.30"
notify = "6.1.1"
regex = "1.10.4"
serde = { version = "1.0.198", features = ["derive"] }
serde_yaml = "0.9.34"
